<resources>
    <string name="app_name">Just Pizza</string>
    <string name="btn_add_to_cart">Добави в кошницата</string>
    <string name="title_company_name">JUST PIZZA</string>
    <string name="label_about_us_menu_option">За Нас</string>
    <string name="label_settings_menu_option">Настройки</string>
    <string name="title_slogan">Най-вкусните пици в града!</string>
    <string name="label_contacts">Контакти:</string>
    <string name="text_contacts">+359899624855\njustpizza@gmail.com\njustpizza.com</string>
    <string name="label_address">Адрес:</string>
    <string name="text_address">бул. Васил Левски 5\nПон-Пет 9:00-20:00\nСъбота и неделя 11:00-20:00</string>
    <string name="label_quantity">Количество</string>
    <string name="text_quantity">1</string>
    <string name="btn_decrement">-</string>
    <string name="btn_increment">+</string>
    <string name="label_total">Обща стойност:</string>
    <string name="text_total">0 лева</string>
    <string name="error_upper_quantity_limit">Не може да поръчате повече от 100 пици.</string>
    <string name="error_lower_quantity_limit">Броят пици не може да е по-малко от 1!</string>
    <string name="error_quantity_cannot_be_empty">Броят пици не може да е празен!</string>
    <string name="empty_string_one_arg">%1$d</string>
    <string name="btn_pizza_with_additives">Пица с Добавки</string>
    <string name="btn_just_pizza">Само Пица</string>
    <string name="label_additives">Добавки</string>
    <string name="checkbox_additive_pickles">Кисели краставички</string>
    <string name="checkbox_additive_corn">Царевица</string>
    <string name="checkbox_additive_mushrooms">Гъби</string>
    <string name="hint_enter_name">Вашите имена</string>
    <string name="hint_enter_address">Улица/Квартал/Номер...</string>
    <string name="hint_enter_phone">Телефон</string>
    <string name="hint_enter_email">Имейл</string>
    <string name="text_chosen_pizza">Избрана Пица</string>
    <string name="add_to_favourites_button_content_description">Add To Favourites Button</string>
    <string name="back_button_content_description">Button to go back to choosing a pizza</string>
    <string name="label_favourites_menu_option">Любими пици</string>
    <string name="label_cart_menu_option">Кошница</string>
    <string name="label_pizzas_menu_option">Пици</string>
    <string name="msg_added_to_cart">Успешно добавяне към кошницата</string>
    <string name="description_chosen_pizza">Съставки</string>
    <string name="label_customer_address">Адрес:</string>
    <string name="label_order_data">Данни за доставката:</string>
    <string name="hint_delivery_date">Дата на доставка</string>
    <string name="hint_delivery_time">Час на доставка</string>
    <string name="btn_finish_order">Завърши Поръчка</string>
    <string name="tv_order_summary_label">Вашата поръчка:</string>
    <string name="orders_email_address">e.shavarska@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_added_to_favourites">Пицата беше добавена към любими!</string>
    <string name="msg_removed_from_favourites">Пицата беше премахната от любими.</string>
    <string name="tv_favourite_pizzas_title">Вашите любими пици:</string>
    <string name="remove_from_order_button_content_description">Remove from order button</string>
</resources>