<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".AboutUsActivity">

    <RelativeLayout
        android:id="@+id/relativelayout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:text="@string/title_company_name"
            android:textColor="@color/orange"
            android:textSize="50sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_pizza"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/text_title"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:src="@drawable/pizza" />

        <TextView
            android:id="@+id/text_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_pizza"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:padding="40dp"
            android:text="@string/title_slogan"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="italic"

            />

        <TextView
            android:id="@+id/text_contactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_slogan"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="15dp"
            android:paddingBottom="10dp"
            android:text="@string/label_contacts"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_contactInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_contactTitle"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="15dp"
            android:text="@string/text_contacts"
            android:textColor="@color/black"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/text_addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_contactInfo"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/label_address"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_locationAndWorkingHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_addressTitle"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingStart="15dp"
            android:paddingBottom="30dp"
            android:text="@string/text_address"
            android:textColor="@color/black"
            android:textSize="20sp"

            />
    </RelativeLayout>
</ScrollView>